--- a/WakeTFT/WakeTFT.csproj
+++ b/WakeTFT/WakeTFT.csproj
@@ -60,8 +60,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="D3DXMath.cs" />
     <Compile Include="Driver.cs" />
-    <Compile Include="Engine.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -71,11 +71,12 @@
     <Compile Include="GameInstance.cs" />
     <Compile Include="GameOffsets.cs" />
     <Compile Include="Interop.cs" />
+    <Compile Include="LoLString.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="server_shared.cs" />
     <Compile Include="Utility.cs" />
-    <Compile Include="Visuals.cs" />
+    <Compile Include="Engine.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
